# prettymux

./: .gitignore  CLAUDE.md  LICENSE  README.md  SCREENCAST_NOTES.md  ghostty
.claude/: settings.local.json
.claude/skills/: build.md
.github/workflows/: build-linux-images.yml  desktop-platforms.yml  flatpak-build.yml  publish-aur-bin.yml  release.yml
.smithers/tickets/: prettymux-review-recovery.md
.smithers/workflows/: prettymux-review-recovery.tsx
docs/: socket-protocol.md
packaging/: AppImageBuilder.yml  PKGBUILD  PKGBUILD-bin.in  ci-smoke-test.sh  dev.prettymux.app.desktop  dev.prettymux.app.service  dev.prettymux.app.yml  nfpm.yaml  prettymux.desktop  prettymux.rc  verify-shell-integration.sh
packaging/containers/: archlinux.Dockerfile  debian-bookworm.Dockerfile  fedora.Dockerfile  ubuntu-24.04.Dockerfile  verify-strip-layout.sh
packaging/debian/: changelog  control  copyright  rules
packaging/debian/source/: include-binaries
plans/: README.md
promo/scripts/: record-demo.sh
skills/: build.md  development.md
snap/: snapcraft.yaml
src/gtk/: app_actions.c  app_actions.h  app_settings.c  app_settings.h  app_state.c  app_state.h  app_support.c  app_support.h  app_ui.h  browser_tab.c  browser_tab.h  browser_tab_macos.m  browser_tab_windows.c  close_confirm.c  close_confirm.h  command_palette.c  command_palette.h  ghostty_actions.c  ghostty_actions.h  ghostty_terminal.c  ghostty_terminal.h  history.c  history.h  hover_focus.c  hover_focus.h  main.c  meson.build  meson.options  notifications.c  notifications.h  pane_move_overlay.c  pane_move_overlay.h  pip_window.c  pip_window.h  pip_window_stub.c  port_scanner.c  port_scanner.h  prettymux-bashrc.sh  prettymux-open.c  prettymux-shell-integration.sh  (+44 more)
src/qt/: CMakeLists.txt  browser_view.h  browser_view_macos.mm  browser_view_qwebengine.cpp  browser_view_windows.cpp  ghostty_windows_stub.c  main.cpp  prettymux-open  welcome.html
workflows/: ci-release.tsx  cli-scripting.tsx  power-features.tsx
